--- a/Desafios/desafio010-projeto-Android/style/style.css
+++ b/Desafios/desafio010-projeto-Android/style/style.css
@@ -36,22 +36,27 @@ a.externo::after{
 
 header{
     background-image: linear-gradient(to top, #063D1E, #23A871);
-    color: white;
     min-height: 150px;
     text-align: center;
     padding-top: 40px;
 }
 
 header > h1{
+    color: white;
     font-family: var(--fonte-destaque);
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.432);
     font-size: 3em;
     font-weight: normal;
+    margin-bottom: 20px;
 }
 header > p{
+    font-family: var(--fonte-padrao);
+    font-size: 1.2em;
     color: white;
-    padding: 10px 80px;
-    margin: 0px;
+    max-width: 600px;
+    padding: 0px 10px;
+    margin: auto;
+    padding-bottom: 30px;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.432);
 }
 nav{
@@ -64,7 +69,7 @@ nav > a{
     text-decoration: none;
     color: var(--cor02);
     font-size: 0.9em;
-    padding: 10px;
+    padding: 5px;
     font-weight: bold;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.418);
     border-radius: 7px;
