--- a/Desafios/desafio012-cordel/style.css
+++ b/Desafios/desafio012-cordel/style.css
@@ -1,8 +1,19 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+@font-face {
+    font-family: 'xiloza';
+    src: url('fontes/xilosa_.ttf');
+}
+
 *{
     margin: 0px;
     padding: 0px;
+}
+:root{
+    --fonte01: 'xiloza', verdana, helvetica;
+    --fonte02: 'Bebas Neue', sans-serif;
 }
 html, body{
     min-height: 100vh;
@@ -15,7 +26,9 @@ header{
 }
 header > h1{
     padding-top: 50px;
+    font-family: var(--fonte01);
     font-variant: small-caps;
+    font-size: 8vw;
 }
 header > p{
     padding-bottom: 50px;
@@ -32,6 +45,8 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte02);
+    font-size: 3vw;
 }
 section.normal{
     background-color: white;
@@ -50,4 +65,6 @@ footer{
     color: white;
     text-align: center;
     padding: 10px;
+    font-family: var(--fonte01);
+    font-weight: normal;
  }
