--- a/Desafios/desafio012-cordel/style.css
+++ b/Desafios/desafio012-cordel/style.css
@@ -48,18 +48,42 @@ section{
     font-family: var(--fonte02);
     font-size: 3vw;
 }
+
+section > p{
+    padding-bottom: 2em;
+}
+
 section.normal{
     background-color: white;
     color: black;
 }
+
 section.imagem{
     background-color: rgb(39, 39, 39);
     color: white;
+    box-shadow: inset 6px 6px 13px 2px rgba(0, 0, 0, 0.459);
+    background-size: cover;
+    background-attachment: fixed;
 }
+
 section.imagem > p{
     background-color: rgba(0, 0, 0, 0.473);
-    width: 300px;
+    width: 400px;
+    padding: 10px;
+    text-shadow: 1.5px 1.5px 2px rgba(0, 0, 0, 0.534);
 }
+
+section#img01{
+    background-image: url('imagens/background001.jpg');
+    background-position: right center;
+    
+}
+
+section#img02{
+    background-image: url('imagens/background002.jpg');
+    background-position: right center;
+}
+
 footer{
     background-color: black;
     color: white;
